SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/SFDC_Data_Service_Fields__c.object-meta.xml
<CustomObject>
    <label>SFDC Data Service Fields</label>
    <nameField>
        <displayFormat>SFF-{0000}</displayFormat>
        <label>Record Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Data Service Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>