SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <defaultValue>&apos;.&apos;</defaultValue>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>