SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>&apos;.&apos;</defaultValue>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>