SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Integrations__c.field-meta.xml
<CustomField>
    <fullName>Integrations__c</fullName>
    <label>Integrations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>