SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <defaultValue>&apos;.&apos;</defaultValue>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>