SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Length</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>