SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/PickList_Values__c.field-meta.xml
<CustomField>
    <fullName>PickList_Values__c</fullName>
    <label>PickList Values</label>
    <type>TextArea</type>
</CustomField>