SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Precision__c.field-meta.xml
<CustomField>
    <fullName>Precision__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>