SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Prefix_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Prefix_Identifier__c</fullName>
    <formula>SFDC_Data_Service_Object__r.Prefix_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prefix Identifier</label>
    <type>Text</type>
</CustomField>