SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Processing_Messages__c.field-meta.xml
<CustomField>
    <fullName>Processing_Messages__c</fullName>
    <label>Processing Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>