SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <formula>SFDC_Data_Service_Object__r.Singular_Label__c</formula>
    <label>Salesforce Object</label>
    <type>Text</type>
</CustomField>