SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Scale__c.field-meta.xml
<CustomField>
    <fullName>Scale__c</fullName>
    <label>Scale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>