SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/SFDC_Data_Service_Object__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Data_Service_Object__c</fullName>
    <label>SFDC Data Service Object</label>
    <referenceTo>SFDC_Data_Service_Object__c</referenceTo>
    <relationshipLabel>SFDC Data Service Fields</relationshipLabel>
    <relationshipName>SFDC_Data_Service_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>