SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Source_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Data_Type__c</fullName>
    <label>Source Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>