SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Source_Precision__c.field-meta.xml
<CustomField>
    <fullName>Source_Precision__c</fullName>
    <label>Source Precision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>