SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Source_Schema__c.field-meta.xml
<CustomField>
    <fullName>Source_Schema__c</fullName>
    <formula>SFDC_Data_Service_Object__r.Source_Schema__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Schema</label>
    <type>Text</type>
</CustomField>