SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Source_Table__c.field-meta.xml
<CustomField>
    <fullName>Source_Table__c</fullName>
    <label>Source Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>