SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Don&apos;t Migrate</fullName>
            </value>
            <value>
                <fullName>Prepare</fullName>
            </value>
            <value>
                <fullName>Prepare Error</fullName>
            </value>
            <value>
                <fullName>Migrate</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Create Error</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>