SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/validationRules/API_Name_Length_40_Chars.validationRule-meta.xml
<ValidationRule>
    <fullName>API_Name_Length_40_Chars</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(API_Name__c) &gt; 40</errorConditionFormula>
    <errorMessage>API Name length cannot exceed 40 characters</errorMessage>
</ValidationRule>