SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Salesforce_Object__c</columns>
    <columns>Source_Table__c</columns>
    <columns>Ordinal__c</columns>
    <columns>Column_Name__c</columns>
    <columns>Comments__c</columns>
    <columns>Questions__c</columns>
    <columns>Integrations__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>