SFDCDataService/main/default/objects/SFDC_Data_Service_Fields__c/listViews/Mapping_Workbook.listView-meta.xml
<ListView>
    <fullName>Mapping_Workbook</fullName>
    <columns>Salesforce_Object__c</columns>
    <columns>API_Name__c</columns>
    <columns>Label__c</columns>
    <columns>Type__c</columns>
    <columns>Length__c</columns>
    <columns>Description__c</columns>
    <columns>Ordinal__c</columns>
    <columns>Status__c</columns>
    <columns>Processing_Messages__c</columns>
    <columns>Source_Table__c</columns>
    <columns>Column_Name__c</columns>
    <columns>Comments__c</columns>
    <columns>Source_Data_Type__c</columns>
    <columns>Source_Length__c</columns>
    <columns>Source_Precision__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mapping Workbook</label>
</ListView>